@@ -35,6 +35,10 @@ Version 4   ???
 
 --Added drop shadows under player, enemies, and bullets.
 
+--Changed so that current powers are carried down when intentionally entering
+  something (though not when unintentionally knocked-down).
+
+
 
 
 
